--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ p{
 
 body{
     font-family: 'Montserrat', sans-serif;
-    font-size: 1rem;
+    font-size: 16px;
     width: 100vw;
     height: 100vh;
 }
@@ -41,7 +41,8 @@ body{
 form{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(4, 1fr)
+    grid-template-rows: repeat(4, 1fr);
+    gap: 10px; 
 }
 
 h1{
@@ -53,18 +54,32 @@ h1{
 
 .box > input{  
     border: 1px solid #e0e0e0;
-}
-
-input:focus{
     height: 24px;
+    border-radius: 3px;
 }
 
-input:valid{
-    border: 1px solid rgb(0, 0, 90);
+.box{
+    position: relative;
 }
 
-input:invalid{
-    border: 1px solid red;
+.box.success input{
+    border: 2px solid #00861d;
+}
+
+.box.success small{
+    border: 2px solid #008026;
+    visibility: hidden;
+}
+
+
+.box.error input{
+    border: 2px solid #bb0000;
+}
+
+
+.box.error small{
+   color: #bb0000 ;
+   visibility: visible;
 }
 
 .box > label{
@@ -72,11 +87,11 @@ input:invalid{
     width: 32px;
 }
 
-.createBtn{
+.submitBtn{
     background-color: rgb(0, 87, 46);
     color: white;
-    font-weight: 700;
-    padding: 12px 24px;
+    font-weight: 600;
+    padding: 12px 20px;
     border-radius: 6px;
     border: 0;
     margin-top: 20px;
@@ -88,4 +103,13 @@ p{
     margin-top: 20px;
 }
 
+span{
+    font-weight: 600;
+}
 
+small{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    visibility: hidden;
+}
